correction visu titre et paragraph version mobile

--- a/css/modal.css
+++ b/css/modal.css
@@ -68,47 +68,6 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -10px;
-    color: red;
-  }
-  .logo {
-    width: 150px;
-  }
-  .bground {
-    margin-top: 50px;
-  }
-  .closingDev {
-    gap: 50px;
-    }
-} 
-
 main {
   font-size: 130%;
   font-weight: bolder;
@@ -480,12 +439,14 @@ input {
 }
 .hero-img {
   grid-column: span 8;
+
 }
 .hero-img img {
   width: 100%;
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -502,7 +463,7 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 960px) {
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -541,6 +502,69 @@ footer {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+ @media screen and (max-width: 540px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    margin-top: -10px;
+    color: red;
+  }
+  .logo {
+    width: 150px;
+  }
+  .bground {
+    margin-top: 50px;
+  }
+  .closingDev {
+    gap: 50px;
+    }
+  .hero-headline {
+    font-size: 1.8rem;
+    white-space: normal;
+  }
+  .hero-text {
+    font-size: 0.9rem;
+    margin-top: 40px;
+  }
+  .hero-img img {
+    margin-top: 15px;
+  }
+  .hero-section > .btn-signup {
+  }
+  .hero-section {
+    min-height: 20vh;
+  }
+  .copyrights {
+    margin-top: 0;
+  }
+  .hero-content {
+    min-width:auto;
+  }
+} 
+
 @keyframes modalopen {
   from {
     opacity: 0;
@@ -550,4 +574,3 @@ footer {
     opacity: 1;
   }
 }
-
